--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+/* GLOBAL RESETS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* COLORS */
+:root {
+  --background: #252525;
+  --links: #52e055;
+  /* 
+  Green styles
+  #28de2b 
+  #52e055
+  */
+}
+/* GLOBAL COLORS AND DECORATIONS */
+a {
+  color: var(--links);
+  text-decoration: none;
+}
+/* FONT SIZE */
+a {
+  font-size: 1.2rem;
+}
+/* IMAGE SIZE */
+img {
+  width: 60%;
+}
+body {
+  font-family: "Ubuntu", sans-serif;
+  background-color: var(--background);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 300px) {
+  header nav {
+    justify-content: center;
   }
 }
