--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 6rem;
 }
 .introSection h2 span {
   color: #52e055;
@@ -11,8 +11,7 @@
   text-decoration: underline #52e055;
 }
 
-.introHeading,
-p {
+.introHeading {
   color: white !important;
 }
 .introSection p {
@@ -29,7 +28,7 @@ p {
 /* Animation */
 .introSection {
   animation-name: fadein;
-  animation-duration: 3s;
+  animation-duration: 1.5s;
 }
 @keyframes fadein {
   from {
@@ -39,5 +38,46 @@ p {
   to {
     opacity: 1;
     padding-right: 0;
+  }
+}
+.smallHeadline {
+  animation: colorChange 5s infinite;
+}
+@keyframes colorChange {
+  0% {
+    color: #52e055;
+  }
+  25% {
+    color: #7ddf7f;
+  }
+  50% {
+    color: #fff;
+  }
+  75% {
+    color: #7ddf7f;
+  }
+  100% {
+    color: #52e055;
+  }
+}
+
+.profilePic {
+  animation: colorChangePic 5s infinite;
+}
+@keyframes colorChangePic {
+  0% {
+    box-shadow: 0 0 10px 2px #52e055;
+  }
+  25% {
+    box-shadow: 0 0 10px 2px #7ddf7f;
+  }
+  50% {
+    box-shadow: 0 0 10px 2px #fff;
+  }
+  75% {
+    box-shadow: 0 0 10px 2px #7ddf7f;
+  }
+  100% {
+    box-shadow: 0 0 10px 2px #52e055;
   }
 }
