added technology stacks elements and rewrote css styling for projects and other elelements

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,9 @@ a {
   border-radius: 11px;
   transition: all 0.5s;
 }
+p {
+  color: var(--white);
+}
 /* LINKS STYLING AND EFFECTS */
 header nav a:hover {
   color: var(--white);
