--- a/src/components/About.css
+++ b/src/components/About.css
@@ -5,6 +5,7 @@ h2 {
   /* border: 2px solid #52e055; */
   border-radius: 9px;
   margin: 0 1rem;
+  padding: 0.4rem 0;
   background-color: black;
 }
 .aboutContainer p {
