added contact form and linked backend mailing service to the form

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -3,7 +3,39 @@ form {
   color: black;
   background-color: #52e055;
   margin: 0 1rem;
+  padding: 0.5rem 0;
   border-radius: 11px;
   text-align: center;
   font-size: 18px;
+}
+form div {
+  margin-bottom: 1.2rem !important;
+}
+form input {
+  margin: 0 1rem;
+  border-radius: 11px;
+  outline: none;
+  border: 2px solid #777;
+}
+.textAreaDiv {
+  display: flex;
+  flex-direction: column;
+  margin: 0 1rem;
+}
+form div textarea {
+  border-radius: 5px;
+}
+button {
+  color: white;
+  background-color: #00460f;
+  padding: 0.5rem 1rem;
+  border-radius: 15px;
+  border: none;
+}
+button:active {
+  color: white;
+  background-color: #52e055;
+}
+.msgSentText {
+  color: black;
 }
