--- a/src/components/About.css
+++ b/src/components/About.css
@@ -6,7 +6,7 @@ h2 {
   border-radius: 9px;
   margin: 0 1rem;
   padding: 0.4rem 0;
-  background-color: black;
+  background-color: #1a1a1a;
 }
 .aboutContainer p {
   margin: 0.5rem 2rem;
