--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -11,8 +11,16 @@ form {
 form div {
   margin-bottom: 1.2rem !important;
 }
+.formElementsWrapper {
+  margin: 0 1.6rem;
+}
+label,
+button {
+  font-weight: 500;
+}
 form input {
-  margin: 0 1rem;
+  /* margin: 0 1rem; */
+  width: 100%;
   border-radius: 11px;
   outline: none;
   border: 2px solid #777;
@@ -20,10 +28,11 @@ form input {
 .textAreaDiv {
   display: flex;
   flex-direction: column;
-  margin: 0 1rem;
+  /* margin: 0 1rem; */
 }
 form div textarea {
   border-radius: 5px;
+  padding: 0 0.2rem;
 }
 button {
   color: white;
