added final project to the card and changed order of two cards

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -108,6 +108,10 @@ a {
   background-color: #60c48a;
   color: white;
 }
+.jest {
+  background-color: #ebebeb;
+  color: #d10202;
+}
 
 .projectLinksBottom {
   display: grid;
