added email address to contact form

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -45,6 +45,10 @@ button:active {
   color: white;
   background-color: #52e055;
 }
+form p {
+  color: black;
+  margin: 0;
+}
 .msgSentText {
   color: black;
 }
