--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -15,6 +15,16 @@ a {
   margin: 0 !important;
   padding: 0 !important;
 }
+.projectsWrapperDiv a:hover {
+  color: white;
+  background-color: #328433;
+}
+
+h4 {
+  color: white;
+  text-align: center;
+  margin-top: 1.1rem;
+}
 
 .projectsSection p {
   margin: 1rem 5%;
@@ -152,5 +162,102 @@ a {
   }
   100% {
     box-shadow: 0px 0px 10px 5px #2a2a2a;
+  }
+}
+
+/* FADE-IN EFFECT AT THE LOAD OF THE PAGE */
+.project1Div,
+.project2Div,
+.project3Div,
+.project4Div,
+.project5Div,
+.project6Div {
+  animation: fade-in 1.5s ease-in;
+}
+.project2Div {
+  animation-name: fade-in;
+  animation-delay: 0.2s;
+}
+.project3Div {
+  animation-name: fade-in;
+  animation-delay: 0.4s;
+}
+.project4Div {
+  animation-name: fade-in;
+  animation-delay: 0.6s;
+}
+.project5Div {
+  animation-name: fade-in;
+  animation-delay: 0.8s;
+}
+.project6Div {
+  animation-name: fade-in;
+  animation-delay: 1s;
+}
+
+@keyframes fade-in {
+  /*  */
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0.05;
+  }
+  10% {
+    opacity: 0.1;
+  }
+  15% {
+    opacity: 0.15;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  30% {
+    opacity: 0.3;
+  }
+  35% {
+    opacity: 0.35;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  45% {
+    opacity: 0.45;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  55% {
+    opacity: 0.55;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  65% {
+    opacity: 0.65;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  85% {
+    opacity: 0.85;
+  }
+  90% {
+    opacity: 0.9;
+  }
+  95% {
+    opacity: 0.95;
+  }
+  100% {
+    opacity: 1;
   }
 }
