--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,34 @@
 }
 /* COLORS */
 :root {
-  --background: linear-gradient(
+  --background: linear-gradient(15deg, #432f71 30%, #070018);
+  /*
+  linear-gradient(
     to bottom,
     #000307,
     #061a2c,
     #002a51,
     #003a77,
     #02499e
-  );
+    */
+
   /* --background: #252525; */
-  --links: #ffffff;
-  --white: #fff;
+  --linksHover: #966dff;
+  --white: #02f2ff;
+  --linksAndParagraphs: #ccc;
+  --span: #966dff;
+  --paras: #ccc;
+  --h3: #966dff;
+  /* #aa88fd */
   /* 
   Green styles
   #28de2b 
   #52e055
   */
 }
+
+/* POSITIONING */
+
 /* GLOBAL COLORS AND DECORATIONS */
 a {
   color: var(--links);
@@ -32,27 +43,37 @@ a {
   border-radius: 11px;
   transition: all 0.5s;
   font-weight: 600;
+  margin: 0;
+  padding: 0;
 }
 p {
-  color: var(--white);
+  color: var(--paras);
   text-align: center;
+}
+span {
+  color: var(--span);
 }
 /* LINKS STYLING AND EFFECTS */
 header nav a:hover {
-  color: var(--white);
-  box-shadow: 0 0 5px 2px var(--links);
-  transition: all 0.5s;
+  color: var(--linksHover);
+  /* text-decoration: underline; */
+  /* box-shadow: 0px 0px 2px 1px var(--linksHover); */
+  text-decoration: underline;
+  text-underline-offset: 7px;
+  /* transition: all 0.5s; */
 }
 header nav a:active {
   box-shadow: 0 0 5px 3px var(--white);
-  transition: all 0.1s;
+  transition: all 0.5s;
 }
 /* FONT SIZE */
 header nav a {
   font-size: 1.2rem;
+  transition: all 0.5s;
 }
+
 h2 {
-  font-size: 1.6rem;
+  font-size: 3rem;
 }
 /* IMAGE SIZE */
 img {
@@ -67,7 +88,8 @@ h2 {
 
 /* *********** */
 body {
-  font-family: "Mukta", sans-serif;
+  /*font:  "Mukta", */
+  font-family: "Kumbh Sans", sans-serif;
   background: var(--background);
   background-attachment: fixed;
 }
