--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,16 +1,69 @@
+:root {
+  --linksColor: #985b00;
+  --borderBottom: #0095b3;
+  --backgroundColor: #001258;
+}
+
 header {
-  margin-bottom: 6rem;
-}
-header nav {
   display: flex;
-  justify-content: right;
-  max-width: 100%;
+  /* position: fixed; */
+  width: 100%;
+  /* background: var(--background) !important; */
+  justify-content: space-around;
+  /* border-bottom: 1px solid var(--borderBottom); */
+}
+.navContainer {
+  display: flex;
+  align-items: center;
 }
 header nav {
-  margin-top: 0.6rem;
+  /* position: fixed; */
+  padding-top: 0.5rem;
+  /* background-color: var(--backgroundColor); */
 }
 
 header nav a {
+  color: var(--linksAndParagraphs);
   padding: 0 0.3rem !important;
   margin: 0 0.2rem !important;
+}
+
+/* SOCIAL ICONS + CV */
+
+.contactIconsContainer {
+  display: flex;
+  margin-top: 0.5rem;
+  border-radius: 11px;
+  text-align: center;
+  column-gap: 3rem;
+  margin-right: 40rem;
+  /* NOTE: margin-right pushes socail icons away a little bit */
+  /* text-align centers the icons, which for some reason reacts to text alignment */
+}
+.contactIconsContainer div {
+  height: 5rem;
+}
+.socialIconsImg {
+  /* border: 2px solid green; */
+  width: 100%;
+  height: 80% !important;
+}
+.gitHubImg {
+  color: white;
+  /* GITHUB KITTY */
+  filter: invert(0.8);
+  /* filter: grayscale(0); */
+  /* inverts color to change github kitty to white/black */
+}
+.linkedInImg {
+  filter: grayscale(0);
+}
+.cvImg {
+  height: 60% !important;
+  margin-top: 20%;
+  filter: invert(0.15);
+}
+.socialIconsLink p {
+  margin: 0 !important;
+  padding: 0 !important;
 }
