--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -5,28 +5,31 @@
   --heading: #fff;
   --blurEffect: #568eff;
   --blurEffectResting: #0f54bd;
-  --btnBackground: #2f74ff;
-  --btnColor: #fff;
+  --btnBackground: #966dff;
+  --btnColor: #eee;
+  --cardBackground: #271a4a;
+}
+
+.projectsSection {
+  display: grid !important;
+  grid-template-columns: 1fr 1fr 6fr;
+  margin-left: 10rem;
 }
 
 .divider {
-  height: 3px;
-  width: 90%;
-  margin: 0 auto;
-  background-color: #fff;
-  margin: 3rem auto;
+  height: 100%;
+  width: 2px;
+  margin-left: 6rem;
+  background-color: var(--span);
   border-radius: 5px;
 }
 
-a {
-  margin: 0 !important;
-  padding: 0 !important;
-}
 .projectsWrapperDiv a:hover {
-  background-color: var(--projectLinkHover);
+  background-color: var(--cardBackground);
 }
 h2 {
   color: var(--heading) !important;
+  align-self: center;
 }
 h4 {
   color: var(--heading);
@@ -42,23 +45,30 @@ h4 {
 .projectsContainer {
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center;
-}
-.projectWrapper {
-  width: 85%;
+  justify-content: space-around;
+  margin-top: 2rem;
 }
 .projectsBorder {
   padding: 1rem 0.8rem;
-  margin-bottom: 3rem !important;
+  margin-bottom: 3rem;
   /* box-shadow: 0 0 10px 3px white; */
   border-radius: 9px;
 }
+.projectWrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  width: 80%;
+  gap: 3rem;
+}
 .projectsWrapperDiv {
   /* border: 2px solid var(--links); */
-  box-shadow: 0 0 7px 2px var(--links);
+  /* box-shadow: 0 0 7px 2px var(--links); */
+  background-color: var(--cardBackground);
   border-radius: 11px;
   margin-bottom: 2rem;
   padding-bottom: 0.5rem;
+  width: 100%;
 }
 /* setting image size */
 .projectWrapper div img {
@@ -79,6 +89,11 @@ h4 {
   gap: 0.2rem;
   justify-content: center;
 }
+
+.techDiv span {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
 /* TECH STACKS ELEMENTS */
 .tech,
 .tech2 {
@@ -90,7 +105,8 @@ h4 {
 }
 .techHtml {
   margin-left: 0.3rem;
-  background-color: #ff9e0d;
+  background-color: #e08b0c;
+  /* #ff9e0d */
 }
 .techCss {
   margin-left: 0.3rem;
@@ -145,11 +161,16 @@ h4 {
   margin-top: 1.2rem !important;
 }
 
+.project3Div div {
+  padding-bottom: 1.15%;
+}
+
 /* *************** */
 /* ANIMATIONS */
 .projectsWrapperDiv {
   /* box-shadow: 10px 0 20px 1px #ffffff !important; */
-  animation: myAnim 12s ease-in infinite;
+  /* animation: myAnim 12s ease-in infinite; */
+  transition: all 2.5s !important;
 }
 @keyframes myAnim {
   /* offset-x | offset-y */
@@ -174,7 +195,7 @@ h4 {
 }
 
 .projectsWrapperDiv:hover {
-  box-shadow: 0px 0px 10px 5px var(--blurEffect) !important;
+  box-shadow: 0px 0px 10px 5px var(--btnBackground) !important;
   transition: all 2.5s !important;
 }
 .project1Div,
@@ -184,7 +205,7 @@ h4 {
 .project5Div,
 .project6Div {
   transition: all 2.5s !important;
-  animation: fade-in 1.4s ease-in;
+  /* animation: fade-in 1.4s ease-in; */
 }
 
 @keyframes fade-in {
