--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 /***** MEDIA QUERIES *****/
 @media screen and (min-width: 300px) {
   header nav {
-    justify-content: center !important;
+    justify-content: center;
   }
   h2 {
-    font-size: 2rem !important;
+    font-size: 2rem;
   }
 }
 @media screen and (min-width: 400px) {
   /* INTRO */
   header nav a {
-    font-size: 1.3rem !important;
+    font-size: 1.3rem;
   }
   .introHeading {
     font-size: 3rem;
@@ -19,36 +19,36 @@
     font-size: 1.4rem;
   }
   .profilePic {
-    width: 14rem !important;
-    height: 14rem !important;
+    width: 14rem;
+    height: 14rem;
   }
   /* PROJECTS */
   .projectWrapper {
-    width: 80% !important;
-    font-size: 1rem !important;
+    width: 80%;
+    font-size: 1rem;
   }
   /* ABOUT */
   .aboutContainer p {
-    font-size: 1.3rem !important;
+    font-size: 1.3rem;
   }
   /* CONTACT and FORM */
   form {
-    margin: 0 3rem !important;
-    font-size: 1.4rem !important;
+    margin: 0 3rem;
+    font-size: 1.4rem;
   }
 }
 
 @media screen and (min-width: 600px) {
   /* LINKS and Headline */
   header nav a {
-    font-size: 1.5rem !important;
+    font-size: 1.5rem;
   }
   h2 {
-    font-size: 3rem !important;
+    font-size: 3rem;
   }
   /* PROJECTS */
   .projectWrapper {
-    width: 60% !important;
+    width: 60%;
     font-size: 1.2rem;
   }
 }
@@ -56,13 +56,13 @@
 @media screen and (min-width: 750px) {
   /* CONTACT FORM */
   form {
-    margin: 0 6rem !important;
+    margin: 0 6rem;
   }
   /* PROJECTS */
   .projectWrapper {
-    display: grid !important;
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 95% !important;
+    width: 95%;
     column-gap: 3rem;
   }
 }
@@ -70,27 +70,27 @@
 @media screen and (min-width: 900px) {
   /* CONTACT FORM */
   form {
-    margin: 0 10rem !important;
-    font-size: 1.2rem !important;
+    margin: 0 10rem;
+    font-size: 1.2rem;
   }
 }
 
 @media screen and (min-width: 1000px) {
   /* PROJECTS */
   .projectWrapper {
-    display: grid !important;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    width: 90% !important;
+    width: 90%;
     column-gap: 3rem;
     row-gap: 3rem;
   }
   /* About */
   .aboutContainer {
-    margin: 0 5rem !important;
+    margin: 0 5rem;
   }
   /* CONTACT FORM */
   form {
-    margin: 0 12rem !important;
+    margin: 0 12rem;
   }
 }
 
@@ -98,12 +98,12 @@
   /*  */
   .projectWrapper {
     grid-template-columns: 1fr 1fr 1fr;
-    width: 85% !important;
+    width: 85%;
     column-gap: 6rem;
   }
   /* CONTACT FORM */
   form {
-    margin: 0 20rem !important;
+    margin: 0 20rem;
   }
 }
 
@@ -111,31 +111,31 @@
   /*  */
   .projectWrapper {
     grid-template-columns: 1fr 1fr 1fr;
-    width: 88% !important;
+    width: 88%;
     column-gap: 10rem;
   }
   /* ABOUT */
   .aboutContainer {
-    margin: 0 14rem !important;
+    margin: 0 14rem;
   }
   /* CONTACT FORM */
   form {
-    margin: 0 24rem !important;
+    margin: 0 24rem;
   }
 }
 
 @media screen and (min-width: 1600px) {
   /* CONTACT FORM */
   form {
-    margin: 0 36rem !important;
-    font-size: 1.2rem !important;
+    margin: 0 36rem;
+    font-size: 1.2rem;
   }
 }
 
 @media screen and (min-width: 1800px) {
   /* CONTACT FORM */
   form {
-    margin: 0 42rem !important;
+    margin: 0 42rem;
   }
 }
 
@@ -143,7 +143,7 @@
   /*  */
   .projectWrapper {
     grid-template-columns: 1fr 1fr 1fr;
-    width: 80% !important;
+    width: 80%;
     column-gap: 12rem;
   }
 }
